@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5727 2004/04/24 15:44:19 minskim Exp $
+$NetBSD: CHANGES,v 1.5728 2004/04/24 16:53:38 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2231,3 +2231,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gnome-pkgview to 1.0.6 [jmmv 2004-04-24]
 	Updated gaim to 0.77 [jmmv 2004-04-24]
 	Updated mathomatic to 11.0d [minskim 2004-04-24]
+	Updated Xrandr to 1.0.2 [minskim 2004-04-24]
